# use4-learning-lab

./: .gitignore  README.md  index.html  pyproject.toml
00_data_cleaning/: README.md  cleaning_spec.ipynb
01.5_daily/: daily_audit.md  daily_spec.ipynb
01_estu/: estu_audit.md  estu_audit.tex  estu_spec.ipynb
02_style_factors/beta/: beta_audit.md  beta_audit.tex  beta_spec.ipynb
02_style_factors/bp/: bp_audit.md  bp_audit.tex  bp_spec.ipynb
02_style_factors/btop/: btop_spec.ipynb
02_style_factors/daily_panel/: daily_panel_audit.md  daily_panel_audit.tex  daily_panel_spec.ipynb
02_style_factors/dyld/: dyld_audit.md  dyld_audit.tex  dyld_spec.ipynb
02_style_factors/eyld/: eyld_audit.md  eyld_audit.tex  eyld_spec.ipynb
02_style_factors/gro/: gro_audit.md  gro_audit.tex  gro_spec.ipynb
02_style_factors/lev/: lev_audit.md  lev_audit.tex  lev_spec.ipynb
02_style_factors/liq/: liq_audit.md  liq_audit.tex  liq_spec.ipynb
03_industry_factors/: README.md  industries_audit.md  industries_audit.tex  industries_spec.ipynb  industry_scheme.csv
04_country_factor/: README.md  country_audit.md  country_audit.tex  country_spec.ipynb
05_csr/: csr_audit.md  csr_spec.ipynb  daily_csr_spec.ipynb
06_fcov/: fcov_audit.md  fcov_spec.ipynb
07_specific_risk/: specific_risk_audit.md  specific_risk_spec.ipynb
08_risk_decomp/: risk_decomp_audit.md  risk_decomp_spec.ipynb
data/: README.md
docs/: CNAME  FACTOR_OVERVIEW.md  USAGE.md  deviations_register.tex
textbook/: .gitignore  overview_risk_model.tex  set2_estimation_universe.tex  set2_size.tex
(+37 files in other folders)
