[project]
name = "use4-learning-lab"
version = "0.1.0"
description = "Educational, from-scratch USE4-style factor construction on Sharadar data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.30",
    "numpy>=2.0",
    "pyarrow>=17",
    "tqdm>=4.66",
    "ipykernel>=6.29",
]

[tool.uv]
package = false
